src/test/ui/tuple/tuple-struct-fields/test3.stderr
error: missing separator `,`
  --> $DIR/test3.rs:5:28
   |
LL |         struct S3(pub($t) ());
   |                  ----------^-
   |                  |         |
   |                  |         help: missing `,`
   |                  while parsing the list starting here
...
LL |     define_struct! { foo }
   |     ---------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected one of `;` or `where`, found `)`
  --> $DIR/test3.rs:5:18
   |
LL |         struct S3(pub($t) ());
   |                  ^^^^^^^^^^^^ expected one of `;` or `where`
...
LL |     define_struct! { foo }
   |     ---------------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

